Bug 224454 Add the prompt to the windo group if there is one. r=marco sr=blizzard